syntax = "proto3";

import "HoroscopResponse.proto";
import "HoroscopRequest.proto";

option csharp_namespace = "Generated";

service HoroscopService {
	rpc ShowSign(HoroscopRequest) returns (HoroscopResponse);
}